@@ -35,11 +35,11 @@
  */
 #else
 
-#define LIBCPATH_VERSION			20120919
+#define LIBCPATH_VERSION			20121018
 
 /* The libcstring version string
  */
-#define LIBCPATH_VERSION_STRING			"20120919"
+#define LIBCPATH_VERSION_STRING			"20121018"
 
 #if defined( WINAPI )
 #define LIBCPATH_SEPARATOR			'\\'
